--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -14,7 +14,7 @@ jobs:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_HOST: localhost # default host value for the database
-      POSTGRES_Name: aptrs
+      POSTGRES_DB: aptrs
       POSTGRES_PORT: 5432
     services:
       postgres_main:
@@ -22,7 +22,7 @@ jobs:
         env:
           POSTGRES_USER: ${{ env.POSTGRES_USER }}
           POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
-          POSTGRES_Name: ${{ env.POSTGRES_Name }}
+          POSTGRES_DB: ${{ env.POSTGRES_DB }}
         ports:
           - 5432:5432
         options: >-
