fixed workflow env error

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -46,7 +46,7 @@ jobs:
       env:
         POSTGRES_USER: ${{ env.POSTGRES_USER }}
         POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
-        POSTGRES_Name: ${{ env.POSTGRES_Name }}
+        POSTGRES_Name: ${{ env.POSTGRES_DB }}
         POSTGRES_HOST: ${{ env.POSTGRES_HOST }}
         POSTGRES_PORT: ${{ env.POSTGRES_PORT }}
       run: | 
