fixed error in env

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -23,6 +23,7 @@ jobs:
           POSTGRES_USER: ${{ env.POSTGRES_USER }}
           POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
           POSTGRES_DB: ${{ env.POSTGRES_DB }}
+          POSTGRES_Name: ${{ env.POSTGRES_DB }}
         ports:
           - 5432:5432
         options: >-
