--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ gunicorn = "20.1.0"
 pillow = "10.2.0"
 pytz = "2022.6"
 sqlparse = "0.4.4"
-tzdata = "2022.5"
+tzdata = "^2024.1"
 django-cors-headers = "3.13.0"
 djangorestframework-simplejwt = "5.2.2"
 colorlog = "6.7.0"
@@ -33,6 +33,7 @@ docxtpl = "0.16.7"
 redis = "5.0.1"
 psycopg2-binary = "^2.9.9"
 django-redis = "^5.4.0"
+celery = "^5.4.0"
 
 [tool.poetry.group.dev.dependencies]
 django-debug-toolbar = "^4.3.0"
