--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,27 +1,18 @@
-name: Docker Compose Check
+name: Docker Image CI
 
 on:
   push:
-    branches:
-      - API
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
+permissions:
+  contents: read
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    services:
-      docker:
-        image: docker:latest
-        options: --privileged
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Build and run Docker Compose
-        run: |
-          docker-compose -f docker-compose.yml up --build --abort-on-container-exit
+    - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+    - name: Build the Docker image
+      run: docker-compose -f docker-compose.yml up --build --abort-on-container-exit
