--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Build Docker images
         run: |
+          sudo apt-get install -y docker-compose
           docker-compose -f docker-compose.yml build
       - name: Run Docker-compose
         run: |
