--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -71,7 +71,7 @@ jobs:
 
     - name: Install Python dependencies
       run: |
-        poetry install --only main --no-root --no-interaction --no-ansi
+        poetry install --no-root --no-interaction --no-ansi
 
     - name: Migrate Database
       run: |
