--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -35,8 +35,7 @@ jobs:
         image: redis:6.2-alpine
         ports:
           - '6379:6379'
-        command: redis-server --save 20 1 --loglevel warning --requirepass eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
-        environment:  
+        env:  
           - REDIS_PASSWORD=eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
           - REDIS_URL=redis://cache:6379/ 
         
