--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ redis = "5.0.1"
 psycopg2-binary = "^2.9.9"
 django-redis = "^5.4.0"
 celery = "^5.4.0"
+django-celery-beat = "^2.6.0"
 
 [tool.poetry.group.dev.dependencies]
 django-debug-toolbar = "^4.3.0"
