fixed error in new DB migration due to table relation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,7 +84,7 @@ services:
     networks:
       - aptrs
     healthcheck:
-      test: ["CMD-SHELL", "curl --fail http://localhost:8000 || exit 1"]
+      test: ["CMD-SHELL", "curl --fail http://localhost:8000/api/ || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
