--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -1,17 +1,31 @@
 # Define upstream for Gunicorn
 upstream django {
-    #server unix:/home/APTRS/APTRS/APTRS.sock;  # Path to your Gunicorn socket file
-     server aptrs:8000;
+    server aptrs:8000;  # Use Docker service name for communication
 }
 
-# Default server configuration
+# Redirect HTTP to HTTPS
 server {
-    listen 80;  # Port to listen on
+    listen 80;
+    server_name _;  # Replace with your domain or use _ for default
 
-    server_name _;  ############## Replace this with your domain name like aptrs.com, default IP access is allowed
+    # Redirect all HTTP requests to HTTPS
+    return 301 https://$host$request_uri;
+}
 
+# HTTPS server configuration
+server {
+    listen 443 ssl;
+    server_name _;  # Replace with your domain
+
+    # SSL configuration
+    ssl_certificate /etc/nginx/certs/selfsigned.crt;  # Path to your SSL certificate
+    ssl_certificate_key /etc/nginx/certs/selfsigned.key;  # Path to your SSL certificate key
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers 'ECDH+AESGCM:ECDH+AES256:!aNULL:!MD5:!3DES';
+    ssl_prefer_server_ciphers on;
+
+    # Define root and handle static/media files
     location / {
-        # everything is passed to Gunicorn
         proxy_pass http://django;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
