updated cipher and ssl security for ngnix

--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -21,8 +21,15 @@ server {
     ssl_certificate /etc/nginx/certs/selfsigned.crt;  # Path to your SSL certificate
     ssl_certificate_key /etc/nginx/certs/selfsigned.key;  # Path to your SSL certificate key
     ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers 'ECDH+AESGCM:ECDH+AES256:!aNULL:!MD5:!3DES';
+    ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256';
     ssl_prefer_server_ciphers on;
+    ssl_stapling on;
+    ssl_stapling_verify on;
+
+    ### Host Validation - > Update according to your need
+    #if ( $host !~* ^(mydomain.com|www.mydomain.com)$ ) {
+    #    return 444;
+    #}
 
     # Define root and handle static/media files
     location / {
