Completed Docker setup, Added SSL for Ngnix, Fixed TLS cihper, permission name verification
Multiple fix validated - #25 #24 #18 #14 #13

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,11 @@ services:
     image: nginx
     volumes:
       - ./scripts/nginx.conf:/etc/nginx/conf.d/aptrs.conf
+      - ./Certificate:/etc/nginx/certs
       - static_volume:/home/aptrs/APTRS/static/  
     ports:
       - 80:80
+      - 443:443
     restart: unless-stopped
     depends_on:
       - aptrs
