--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -3,6 +3,7 @@ upstream django {
     server aptrs:8000;  # Use Docker service name for communication
 }
 
+
 # Redirect HTTP to HTTPS
 server {
     listen 80;
@@ -10,6 +11,8 @@ server {
 
     # Redirect all HTTP requests to HTTPS
     return 301 https://$host$request_uri;
+    server_tokens off;
+    
 }
 
 # HTTPS server configuration
@@ -18,13 +21,16 @@ server {
     server_name _;  # Replace with your domain
 
     # SSL configuration
-    ssl_certificate /etc/nginx/certs/selfsigned.crt;  # Path to your SSL certificate
-    ssl_certificate_key /etc/nginx/certs/selfsigned.key;  # Path to your SSL certificate key
+    ssl_certificate /etc/nginx/certs/selfsigned.crt;  
+    ssl_certificate_key /etc/nginx/certs/selfsigned.key;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256';
     ssl_prefer_server_ciphers on;
     ssl_stapling on;
     ssl_stapling_verify on;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    server_tokens off;
+
 
     ### Host Validation - > Update according to your need
     #if ( $host !~* ^(mydomain.com|www.mydomain.com)$ ) {
