--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ pytz = "2022.6"
 sqlparse = "0.4.4"
 tzdata = "^2024.1"
 django-cors-headers = "3.13.0"
-djangorestframework-simplejwt = "5.2.2"
+djangorestframework-simplejwt = "5.3.1"
 colorlog = "6.7.0"
 django-filter = "23.5"
 python-dotenv = "1.0.0"
@@ -29,9 +29,10 @@ bleach = "6.1.0"
 xlsxwriter = "3.1.9"
 whitenoise = "6.6.0"
 htmldocx = "0.0.6"
-docxtpl = "0.16.7"
+docxtpl = "0.18.0"
 redis = "5.0.1"
 psycopg2-binary = "^2.9.9"
+jinja2 = "^3.1.4"
 django-redis = "^5.4.0"
 celery = "^5.4.0"
 django-celery-beat = "^2.6.0"
