--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,75 @@
-asgiref==3.5.2
-backports.zoneinfo==0.2.1;python_version<"3.9"
-Django==4.1.13
-django-ckeditor==6.5.1
-django-phonenumber-field==7.0.0
-django-phonenumbers==1.0.1
-djangorestframework==3.14.0
-gunicorn==20.1.0
-Pillow==10.2.0
-pytz==2022.6
-sqlparse==0.4.4
-typing_extensions==4.4.0
-tzdata==2022.5
-django-cors-headers==3.13.0
-djangorestframework-simplejwt==5.2.2
-colorlog==6.7.0
-django-filter==23.5
-python-dotenv==1.0.0
-weasyprint==60.2
-pygal==3.0.4
-bleach==6.1.0
-XlsxWriter==3.1.9
-whitenoise==6.6.0
-htmldocx==0.0.6
-docxtpl==0.16.7
-redis ==5.0.1
-django-debug-toolbar==4.3.0
-django-redis==5.4.0
+amqp==5.2.0 ; python_version >= "3.8" and python_version < "4.0"
+asgiref==3.8.1 ; python_version >= "3.8" and python_version < "4.0"
+async-timeout==4.0.3 ; python_version >= "3.8" and python_full_version <= "3.11.2"
+babel==2.16.0 ; python_version >= "3.8" and python_version < "4.0"
+backports-zoneinfo==0.2.1 ; python_version >= "3.8" and python_version < "3.9"
+backports-zoneinfo[tzdata]==0.2.1 ; python_version >= "3.8" and python_version < "3.9"
+beautifulsoup4==4.12.3 ; python_version >= "3.8" and python_version < "4.0"
+billiard==4.2.0 ; python_version >= "3.8" and python_version < "4.0"
+bleach==6.1.0 ; python_version >= "3.8" and python_version < "4.0"
+brotli==1.1.0 ; platform_python_implementation == "CPython" and python_version >= "3.8" and python_version < "4.0"
+brotlicffi==1.1.0.0 ; platform_python_implementation != "CPython" and python_version >= "3.8" and python_version < "4.0"
+celery==5.4.0 ; python_version >= "3.8" and python_version < "4.0"
+cffi==1.17.0 ; python_version >= "3.8" and python_version < "4.0"
+click-didyoumean==0.3.1 ; python_version >= "3.8" and python_version < "4.0"
+click-plugins==1.1.1 ; python_version >= "3.8" and python_version < "4.0"
+click-repl==0.3.0 ; python_version >= "3.8" and python_version < "4.0"
+click==8.1.7 ; python_version >= "3.8" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.8" and python_version < "4.0" and (sys_platform == "win32" or platform_system == "Windows")
+colorlog==6.7.0 ; python_version >= "3.8" and python_version < "4.0"
+cron-descriptor==1.4.3 ; python_version >= "3.8" and python_version < "4.0"
+cssselect2==0.7.0 ; python_version >= "3.8" and python_version < "4.0"
+django-celery-beat==2.6.0 ; python_version >= "3.8" and python_version < "4.0"
+django-ckeditor==6.5.1 ; python_version >= "3.8" and python_version < "4.0"
+django-cors-headers==3.13.0 ; python_version >= "3.8" and python_version < "4.0"
+django-filter==23.5 ; python_version >= "3.8" and python_version < "4.0"
+django-js-asset==2.2.0 ; python_version >= "3.8" and python_version < "4.0"
+django-phonenumber-field==7.0.0 ; python_version >= "3.8" and python_version < "4.0"
+django-phonenumbers==1.0.1 ; python_version >= "3.8" and python_version < "4.0"
+django-redis==5.4.0 ; python_version >= "3.8" and python_version < "4.0"
+django-timezone-field==7.0 ; python_version >= "3.8" and python_version < "4.0"
+django==4.2.15 ; python_version >= "3.8" and python_version < "4.0"
+djangorestframework-simplejwt==5.3.1 ; python_version >= "3.8" and python_version < "4.0"
+djangorestframework==3.15.2 ; python_version >= "3.8" and python_version < "4.0"
+docxcompose==1.4.0 ; python_version >= "3.8" and python_version < "4.0"
+docxtpl==0.18.0 ; python_version >= "3.8" and python_version < "4.0"
+fonttools[woff]==4.53.1 ; python_version >= "3.8" and python_version < "4.0"
+gunicorn==22.0.0 ; python_version >= "3.8" and python_version < "4.0"
+html5lib==1.1 ; python_version >= "3.8" and python_version < "4.0"
+htmldocx==0.0.6 ; python_version >= "3.8" and python_version < "4.0"
+importlib-metadata==8.2.0 ; python_version >= "3.8" and python_version < "4.0"
+jinja2==3.1.4 ; python_version >= "3.8" and python_version < "4.0"
+kombu==5.4.0 ; python_version >= "3.8" and python_version < "4.0"
+lxml==5.3.0 ; python_version >= "3.8" and python_version < "4.0"
+markupsafe==2.1.5 ; python_version >= "3.8" and python_version < "4.0"
+packaging==24.1 ; python_version >= "3.8" and python_version < "4.0"
+phonenumbers==8.13.43 ; python_version >= "3.8" and python_version < "4.0"
+pillow==10.4.0 ; python_version >= "3.8" and python_version < "4.0"
+prompt-toolkit==3.0.47 ; python_version >= "3.8" and python_version < "4.0"
+psycopg2-binary==2.9.9 ; python_version >= "3.8" and python_version < "4.0"
+pycparser==2.22 ; python_version >= "3.8" and python_version < "4.0"
+pydyf==0.11.0 ; python_version >= "3.8" and python_version < "4.0"
+pygal==3.0.4 ; python_version >= "3.8" and python_version < "4.0"
+pyjwt==2.9.0 ; python_version >= "3.8" and python_version < "4.0"
+pyphen==0.16.0 ; python_version >= "3.8" and python_version < "4.0"
+python-crontab==3.2.0 ; python_version >= "3.8" and python_version < "4.0"
+python-dateutil==2.9.0.post0 ; python_version >= "3.8" and python_version < "4.0"
+python-docx==1.1.2 ; python_version >= "3.8" and python_version < "4.0"
+python-dotenv==1.0.0 ; python_version >= "3.8" and python_version < "4.0"
+pytz==2022.6 ; python_version >= "3.8" and python_version < "4.0"
+redis==5.0.1 ; python_version >= "3.8" and python_version < "4.0"
+setuptools==72.1.0 ; python_version >= "3.8" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.8" and python_version < "4.0"
+soupsieve==2.5 ; python_version >= "3.8" and python_version < "4.0"
+sqlparse==0.5.0 ; python_version >= "3.8" and python_version < "4.0"
+tinycss2==1.3.0 ; python_version >= "3.8" and python_version < "4.0"
+typing-extensions==4.12.2 ; python_version >= "3.8" and python_version < "4.0"
+tzdata==2024.1 ; python_version >= "3.8" and python_version < "4.0"
+vine==5.1.0 ; python_version >= "3.8" and python_version < "4.0"
+wcwidth==0.2.13 ; python_version >= "3.8" and python_version < "4.0"
+weasyprint==60.2 ; python_version >= "3.8" and python_version < "4.0"
+webencodings==0.5.1 ; python_version >= "3.8" and python_version < "4.0"
+whitenoise==6.6.0 ; python_version >= "3.8" and python_version < "4.0"
+xlsxwriter==3.1.9 ; python_version >= "3.8" and python_version < "4.0"
+zipp==3.19.2 ; python_version >= "3.8" and python_version < "4.0"
+zopfli==0.2.3 ; python_version >= "3.8" and python_version < "4.0"
