fixed docker issues

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,12 @@ services:
 
   nginx:
     image: nginx
+    read_only: true
     volumes:
       - ./scripts/nginx.conf:/etc/nginx/conf.d/aptrs.conf
       - ./Certificate:/etc/nginx/certs
-      - static_volume:/home/aptrs/APTRS/static/  
+      - static_volume:/home/aptrs/APTRS/static/
+      - ./nginx/logs:/var/log/nginx 
     ports:
       - 80:80
       - 443:443
