removed unwanted code, update docke ngnix pemssion

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       - aptrs
     networks:
         - aptrs
+    security_opt:
+      - no-new-privileges:true
 
   postgres:
     image: "postgres:latest"
