--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,8 @@ jinja2 = "^3.1.4"
 django-redis = "^5.4.0"
 celery = "^5.4.0"
 django-celery-beat = "^2.6.0"
+boto3 = "^1.34.159"
+django-storages = "^1.14.4"
 
 [tool.poetry.group.dev.dependencies]
 django-debug-toolbar = "^4.3.0"
