--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "APTRS Licence"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.9"
 django = "4.2.15"
 django-ckeditor = "6.5.1"
 django-phonenumber-field = "7.0.0"
@@ -23,7 +23,7 @@ djangorestframework-simplejwt = "5.3.1"
 colorlog = "6.7.0"
 django-filter = "23.5"
 python-dotenv = "1.0.0"
-weasyprint = "60.2"
+weasyprint = "^62.3"
 pygal = "3.0.4"
 bleach = "6.1.0"
 xlsxwriter = "3.1.9"
