--- a/.gitignore
+++ b/.gitignore
@@ -203,14 +203,15 @@ APTRS.code-workspace
 
 
 
+
 ### Frontend
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+frontend/node_modules
+frontend/.env.*
+!frontend/src/*
 
 # testing
 /coverage
