--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -38,12 +38,18 @@ server {
     #}
 
     # Define root and handle static/media files
-    location / {
+    location /api {
         proxy_pass http://django;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
     }
+
+    location / {
+    root /usr/share/nginx/html;
+    index index.html index.htm;
+    try_files $uri $uri/ /index.html =404;
+  }
 
     location /static/ {
         alias /home/aptrs/APTRS/static/;  # Path to your static files
