fixed docker network error, report css and image loading fixed, added auth for images.

--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -39,7 +39,7 @@ server {
 
     # Define root and handle static/media files
     location /api {
-        proxy_pass http://django;
+        proxy_pass http://aptrs:8000;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
