--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,6 +76,7 @@ services:
       AWS_S3_REGION_NAME: ${AWS_S3_REGION_NAME}
       AWS_S3_CUSTOM_DOMAIN: ${AWS_S3_CUSTOM_DOMAIN}
       AWS_S3_ENDPOINT_URL: ${AWS_S3_ENDPOINT_URL}
+      USE_DOCKER: "True"
     depends_on:
       - postgres
       - cache
@@ -102,6 +103,7 @@ services:
       
 networks:
   aptrs:
+
 
 
 volumes:
