fix image upload limit error, added support for S3 bucket image for word report, fixed word report template

--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -30,6 +30,8 @@ server {
     ssl_stapling_verify on;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
     server_tokens off;
+    client_max_body_size 100M;
+
 
 
     ### Host Validation - > Update according to your need
