--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -57,9 +57,23 @@ server {
         alias /home/aptrs/APTRS/static/;  # Path to your static files
     }
 
-    location /media/ {
-        alias /home/aptrs/APTRS/static/media/;  # Path to your media files
+    # Blocked, accessing whole media folder may lead to access to sensitive images like POC images, 
+    #location /media/ {
+    #    alias /home/aptrs/APTRS/media/;  # Path to your media files
+    #} 
+
+
+    location /media/profile/ {
+        alias /home/aptrs/APTRS/APTRS/media/profile/;  # Path to your media files
+    } 
+
+    location /media/company/ {
+        alias /home/aptrs/APTRS/APTRS/media/company/;  # Path to your media files
     }
+
+    location /media/report/ {
+        alias /home/aptrs/APTRS/APTRS/media/report/;  # Path to your media files
+    } 
 
     access_log /var/log/nginx/APTRS_access.log;  # Path to access log file
     error_log /var/log/nginx/APTRS_error.log;   # Path to error log file
