--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,22 +10,14 @@ permissions:
   contents: read
 
 jobs:
-  test:
+  tests:
+    name: "Integration testing"
     runs-on: ubuntu-latest
-    services:
-      docker:
-        image: docker:20.10.9
-        options: --privileged
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Build Docker images
+      - uses: actions/checkout@v3
+      - name: "Set up environment"
         run: |
           cp env.docker .env
-          sudo apt-get install -y docker-compose
-          docker-compose -f docker-compose.yml build
-      - name: Run Docker-compose
-        run: |
-          docker-compose -f docker-compose.yml up -d
-          docker-compose -f docker-compose.yml ps
-          sleep 30
+          docker compose -f docker-compose.yml up -d --wait
+      - name: "Test server"
+        run: docker exec -it aptrs-1 cd /home /home/aptrs/APTRS/APTRS && python3 manange.py test
