--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -43,6 +43,7 @@ server {
     location /api {
         proxy_pass http://aptrs:8000;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $host;
         proxy_redirect off;
     }
