fixed error docker env for non docker deployment, added cookie support for report API, removed project as package from poetry

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "APTRS (Automated Penetration Testing Reporting System) is a Pytho
 authors = ["Sourav Kalal <kalalsourav20@gmail.com>"]
 license = "APTRS Licence"
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.9"
