--- a/APTRS/env.example
+++ b/APTRS/env.example
@@ -9,6 +9,7 @@ POSTGRES_HOST="127.0.0.1"
 POSTGRES_PORT=5432
 POSTGRES_DB="aptrs"
 USE_DOCKER=False
+USER_TIME_ZONE="Asia/Kolkata"
 USE_S3=False
 AWS_ACCESS_KEY_ID=''
 AWS_SECRET_ACCESS_KEY=''
