updated urls in readme, fixed django build workflow

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -24,7 +24,7 @@
       "login": "djscruggs",
       "name": "DJ Scruggs",
       "avatar_url": "https://avatars.githubusercontent.com/u/41671?v=4",
-      "profile": "https://pwn.by/djscruggs",
+      "profile": "https://github.com/djscruggs",
       "contributions": [
         "code"
       ]
@@ -33,7 +33,7 @@
       "login": "noraj",
       "name": "Alexandre ZANNI",
       "avatar_url": "https://avatars.githubusercontent.com/u/16578570?v=4",
-      "profile": "https://pwn.by/noraj",
+      "profile": "https://github.com/noraj",
       "contributions": [
         "code"
       ]
