--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,6 +64,7 @@ jobs:
         echo 'CORS_ORIGIN = ["http://127.0.0.1:8080","http://127.0.0.1:5000"]' >> APTRS/.env
         echo 'USER_TIME_ZONE="Asia/Kolkata"' >> APTRS/.env
         echo 'USE_DOCKER=False' >> APTRS/.env
+        echo 'SECRET_KEY=3-3hnf1kkn#x0350(we+9^m@69xc3_e_@_7$2tf=d)6$i*t_0#' >> APTRS/.env
       
         
 
